connect for fe - map + list game
